# gcal_rs

./: Cargo.toml  README.md
examples/: calendars.rs  events.rs
src/: client.rs  error.rs  oauth.rs
src/calendar/: client.rs  types.rs
src/event/: client.rs  mod.rs  types.rs
