[package]
name = "gcal_rs"
version = "0.1.7"
edition = "2021"
description = "A blazingly fast, hand written Google calendar API in Rust"
authors = ["Shadorain <shadorain7517@gmail.com"]
readme = "README.md"
license = "GPL-3.0"
homepage = "https://github.com/Shadorain/gcal_rs"
repository = "https://github.com/Shadorain/gcal_rs"
keywords = ["google_calendar", "calendar", "oauth2", "events"]
categories = ["asynchronous", "date-and-time"]

[dependencies]
anyhow = "1"
thiserror = "1"

tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = "0.4"
url = "2"
reqwest = { version = "^0.12", features = ["gzip", "json"] }
oauth2 = "5.0.0"
percent-encoding = "2.3.1"
